@@ -1,2 +1,7 @@
 # QO_Calc
 This is a calculator based on the queue data structure. I hope you find it useful.
+
+## How to run
+1. Download JavaFX
+2. javac --module-path ~/javafx-sdk-25.0.3/lib --add-modules javafx.controls MainScreen.java
+3. java --module-path ~/javafx-sdk-25.0.3/lib --add-modules javafx.controls MainScreen
